# rel4-linux-kit

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  apps.toml  crates.js  help.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.cargo/: config.toml
allocator_api2/: all.html  index.html  macro.unsize_box.html  macro.vec.html  trait.SliceExt.html
allocfs/: all.html  enum.FileContainer.html  index.html  sidebar-items.js  struct.AllocFS.html  struct.FSDir.html  struct.FSDirInner.html  struct.FSFile.html  struct.FSFileInner.html  struct.FSLink.html  struct.FSLinkInner.html
arm_pl011/: all.html  index.html
bit_field/: trait.BitArray.html  trait.BitField.html
bitflags/: all.html  index.html  macro.bitflags.html  macro.bitflags_match.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
bitmaps/: all.html  index.html  struct.Bitmap.html  struct.BitsImpl.html  struct.Iter.html  trait.BitOps.html  trait.Bits.html
blk_thread/: all.html  index.html  sidebar-items.js  static.VIRTIOBLK.html  struct.VirtIOBlkImpl.html
common/: all.html  attr.generate_ipc_send.html  attr.ipc_trait.html  attr.ipc_trait_impl.html  index.html  macro.init_log!.html  macro.init_log.html  macro.read_types!.html  macro.read_types.html  macro.reply_with!.html  macro.reply_with.html  macro.write_values!.html  macro.write_values.html  sidebar-items.js  struct.Logger.html  struct.LoggerBuilder.html  struct.ObjectAllocator.html
config/: Cargo.toml
configs/: mode1.toml  mode2.toml
crates/common/: Cargo.toml
crates/common/src/: config.rs  consts.rs  ipc_saver.rs  ipcrw.rs  lib.rs  log_impl.rs  obj_allocator.rs  page.rs  root.rs  slot.rs  thread.rs  uspace.rs  utils.rs
crates/common/src/arch/: mod.rs
crates/common/src/ipc/: ipc_saver.rs  mod.rs
crates/common/src/mem/: mod.rs
crates/common/src/services/: block.rs  fs.rs  mod.rs  root.rs  uart.rs
crates/sel4-oskit/: Cargo.toml
crates/sel4-oskit/src/: allocator.rs  asm.rs  capset.rs  config.rs  ipc.rs  irq.rs  lib.rs  memory.rs
crates/sel4-runtime/: Cargo.toml
crates/sel4-runtime/src/: consts.rs  entry.rs  heap.rs  lib.rs  logging.rs  macros.rs  slot.rs  utils.rs
crates/srv-gate/: Cargo.toml  build.rs
crates/srv-gate/src/: __prelude.rs  blk.rs  consts.rs  event.rs  fs.rs  lib.rs  uart.rs
crates/srv-iface/: Cargo.toml
crates/srv-iface/src/: lib.rs  uart.rs
crates/task-helper/: Cargo.toml
crates/task-helper/src/: lib.rs
dlmalloc/: all.html  index.html  sidebar-items.js  struct.Dlmalloc.html  trait.Allocator.html
downcast_rs/: all.html  index.html  macro.impl_downcast.html  trait.Downcast.html  trait.DowncastSend.html  trait.DowncastSync.html
equivalent/: all.html  index.html  trait.Comparable.html  trait.Equivalent.html
ext4fs/: all.html  fn.map_ext4_type.html  index.html  sidebar-items.js  struct.Ext4DiskWrapper.html  struct.Ext4FileSystem.html  struct.Ext4FileWrapper.html
flatten_objects/: all.html  index.html  struct.FlattenObjects.html
foldhash/: all.html  index.html
fs/: all.html  enum.FileType.html  enum.SeekFrom.html  index.html  sidebar-items.js  struct.WaitBlockingRead.html  struct.WaitBlockingWrite.html  trait.INodeInterface.html
futures/: all.html  index.html  macro.pin_mut.html  macro.ready.html
futures_channel/: all.html  index.html
futures_core/: all.html  index.html  macro.ready.html
futures_io/: all.html  index.html
futures_sink/: all.html  index.html  trait.Sink.html
futures_task/: all.html  fn.noop_waker.html  fn.noop_waker_ref.html  fn.waker.html  fn.waker_ref.html  index.html  struct.FutureObj.html  struct.LocalFutureObj.html  struct.SpawnError.html  struct.WakerRef.html  trait.ArcWake.html  trait.LocalSpawn.html  trait.Spawn.html  trait.UnsafeFutureObj.html
futures_util/: all.html  index.html  macro.pin_mut.html  macro.ready.html
hashbrown/: all.html  enum.TryReserveError.html  index.html  struct.HashMap.html  struct.HashSet.html  struct.HashTable.html  trait.Equivalent.html  type.DefaultHashBuilder.html
kernel_thread/: all.html  (+9 more)
root-task/: Cargo.toml  README.md  build.rs  services.toml  template.rs.liquid
root-task/src/: config.rs  cspace.rs  handler.rs  main.rs  task.rs  thread.rs  timer.rs  utils.rs
services/blk-thread/: Cargo.toml
services/blk-thread/src/: lib.rs  main.rs  virtio.rs
services/ext4-thread/: Cargo.toml
services/ext4-thread/src/: imp.rs  main.rs
services/fat-thread/: Cargo.toml
services/fat-thread/src/: cursor.rs  main.rs
services/kernel-thread/: Cargo.toml  build.rs
services/kernel-thread/src/: child_test.rs  exception.rs  logging.rs  main.rs  rasync.rs  runtime.rs  task.rs  thread.rs  timer.rs  utils.rs  vdso.rs
services/kernel-thread/src/arch/: mod.rs
services/kernel-thread/src/consts/: fd.rs  mod.rs  task.rs
services/kernel-thread/src/device/: mod.rs  uart.rs
services/kernel-thread/src/fs/: file.rs  ipc_fs.rs  mod.rs  pipe.rs  socket.rs  stdio.rs  vfs.rs
services/kernel-thread/src/fs/devfs/: mod.rs  null.rs  stdio.rs  zero.rs
services/kernel-thread/src/net/: mod.rs
services/kernel-thread/src/syscall/: fs.rs  mm.rs  mod.rs  signal.rs  socket.rs  sys.rs  thread.rs
services/kernel-thread/src/syscall/fs/: io.rs  mod.rs
services/kernel-thread/src/syscall/mm/: brk.rs  mmap.rs  mod.rs
services/kernel-thread/src/syscall/net/: ipc.rs  mod.rs  net_impl.rs
services/kernel-thread/src/syscall/thread/: mod.rs  schedule.rs  task.rs
services/kernel-thread/src/syscall/types/: fs.rs  mm.rs  mod.rs  signal.rs  sys.rs  thread.rs
services/kernel-thread/src/task/: auxv.rs  file.rs  info.rs  init.rs  mem.rs  mod.rs  pcb.rs  shim.rs  shm.rs  signal.rs
services/kernel-thread/src/utils/: blk.rs  mod.rs  obj.rs  page.rs  service.rs
services/lwext4-thread/: Cargo.toml
services/lwext4-thread/src/: imp.rs  lib.rs  main.rs
services/uart-thread/: Cargo.toml
services/uart-thread/src/: lib.rs  main.rs  uart.rs
tasks/simple-cli/: Cargo.toml
tasks/simple-cli/src/: main.rs
tasks/test-demo/: Cargo.toml
tasks/test-demo/src/: main.rs
tasks/test-thread/: Cargo.toml
tasks/test-thread/src/: main.rs
(+9974 files in other folders)
