[workspace]

resolver = "2"

members = [
  "config",
  "root-task",
  "crates/common",
  "crates/common-macros",
  "crates/sel4-runtime",
  "crates/slot-manager",
  "crates/task-helper",
  "services/blk-thread",
  # "services/fat-thread",
  "services/lwext4-thread",
  "services/uart-thread",
  "services/kernel-thread",
  "tasks/simple-cli",
]

[workspace.package]
edition = "2024"

# 对于一些公共性的依赖，统一在这里指定版本号
# 在使用的地方加上 xxx = { workspace = true }
[workspace.dependencies]
# rust-sel4 相关依赖
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd", default-features = false }
sel4-ctors-dtors = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-dlmalloc = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-root-task = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-elf-header = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-initialize-tls = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-panicking = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-panicking-env = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-runtime-common = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-async-single-threaded-executor = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }

sel4-stack = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-sync = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }

sel4-runtime = { path = "crates/sel4-runtime" }
sel4-kit = { path = "crates/sel4-kit" }

# 一些公共包
config = { path = "config" }
task-helper = { path = "crates/task-helper" }
common = { path = "crates/common" }
common-macros = { path = "crates/common-macros" }
slot-manager = { path = "crates/slot-manager" }
flatten_objects = "0.2.2"

spin = "0.9.8"
syscalls = { version = "0.6", default-features = false }
hashbrown = "0.15"

[patch."https://github.com/seL4/rust-sel4"]
sel4 = { git = "https://github.com/yfblock/rust-sel4", rev = "1280281" }
