[workspace]

resolver = "2"

members = [
  "config",
  "root-task",
  "crates/common",
  "crates/common-macros",
  "crates/sel4-runtime",
  "crates/slot-manager",
  "crates/task-helper",
  "crates/srv-iface",
  "services/blk-thread",
  # "services/fat-thread",
  "services/lwext4-thread",
  "services/uart-thread",
  "services/kernel-thread",
  "tasks/simple-cli",
  "tasks/test-demo",

  # 普通模块
  "ByteOS/crates/devices",
  "ByteOS/crates/executor",
  "ByteOS/crates/runtime",
  "ByteOS/crates/signal",
  "ByteOS/crates/sync",
  "ByteOS/crates/addr",
  "ByteOS/crates/sel4-hal",

  # 文件系统
  "ByteOS/filesystem/devfs",
  "ByteOS/filesystem/fs",
  "ByteOS/filesystem/procfs",
  "ByteOS/filesystem/ramfs",
  "ByteOS/filesystem/vfscore",

  #内核
  "ByteOS/kernel",
]

[workspace.package]
edition = "2024"

# 对于一些公共性的依赖，统一在这里指定版本号
# 在使用的地方加上 xxx = { workspace = true }
[workspace.dependencies]
# rust-sel4 相关依赖
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd", default-features = false }
sel4-ctors-dtors = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-dlmalloc = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-root-task = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-elf-header = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-initialize-tls = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-panicking = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-panicking-env = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-runtime-common = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-async-single-threaded-executor = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }

sel4-stack = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-sync = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }

sel4-runtime = { path = "crates/sel4-runtime" }
sel4-kit = { path = "crates/sel4-kit" }

# 服务库
uart-thread = { path = "services/uart-thread" }

# 一些公共包
config = { path = "config" }
task-helper = { path = "crates/task-helper" }
common = { path = "crates/common" }
common-macros = { path = "crates/common-macros" }
slot-manager = { path = "crates/slot-manager" }
srv-iface = { path = "crates/srv-iface" }
flatten_objects = "0.2.2"
zerocopy = { version = "0.8.20", features = ["alloc", "derive"] }


spin = "0.9.8"
syscalls = { version = "0.6", default-features = false }
hashbrown = "0.15"
linkme = { version = "0.3.32", features = ["used_linker"] }

# ByteOS Deps
addr = { path = "ByteOS/crates/addr" }
fs = { path = "ByteOS/filesystem/fs" }
devfs = { path = "ByteOS/filesystem/devfs" }
procfs = { path = "ByteOS/filesystem/procfs" }
vfscore = { path = "ByteOS/filesystem/vfscore" }
ramfs = { path = "ByteOS/filesystem/ramfs" }
sel4-hal = { path = "ByteOS/crates/sel4-hal" }

devices = { path = "ByteOS/crates/devices" }
executor = { path = "ByteOS/crates/executor" }
runtime = { path = "ByteOS/crates/runtime" }
logging = { path = "ByteOS/crates/logging" }
signal = { path = "ByteOS/crates/signal" }
sync = { path = "ByteOS/crates/sync" }
fdt-parser = { version = "0.4.12" }

[patch."https://github.com/seL4/rust-sel4"]
sel4 = { git = "https://github.com/yfblock/rust-sel4", rev = "1280281" }
