[workspace]

resolver = "2"

members = [
  "root-task",
  "crates/common",
  "crates/common-macros",
  "crates/sel4-runtime",
  "crates/srv-gate",
  "crates/libc-core",
  "services/blk-thread",
  # "services/fat-thread",
  "services/lwext4-thread",
  "services/uart-thread",
  "services/kernel-thread",
  "tasks/simple-cli",
  "tasks/test-demo",
]

[workspace.package]
edition = "2024"

# 对于一些公共性的依赖，统一在这里指定版本号
# 在使用的地方加上 xxx = { workspace = true }
[workspace.dependencies]
# rust-sel4 相关依赖
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd", default-features = false }
sel4-ctors-dtors = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-dlmalloc = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-root-task = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-elf-header = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-initialize-tls = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-logging = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-panicking = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-panicking-env = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-runtime-common = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-async-single-threaded-executor = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }

sel4-stack = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }
sel4-sync = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }

sel4-runtime = { path = "crates/sel4-runtime" }
sel4-kit = { path = "crates/sel4-kit" }

# 服务库
uart-thread = { path = "services/uart-thread" }
lwext4-thread = { path = "services/lwext4-thread" }

# 一些公共包
common = { path = "crates/common" }
common-macros = { path = "crates/common-macros" }
srv-gate = { path = "crates/srv-gate" }
flatten_objects = "0.2.2"
zerocopy = { version = "0.8.20", features = ["alloc", "derive"] }
libc-core = { version = "0.2.1", features = ["zerocopy"] }

spin = "0.9.8"
syscalls = { git = "https://github.com/jasonwhite/syscalls.git", default-features = false }
hashbrown = "0.15"
linkme = { version = "0.3.32", features = ["used_linker"] }

[patch."https://github.com/seL4/rust-sel4"]
sel4 = { git = "https://github.com/yfblock/rust-sel4", rev = "1280281" }

[patch.crates-io]
libc-core = { path = "crates/libc-core" }
