[package]
name = "root-task"
version = "0.1.0"
edition = "2021"

[dependencies]
# rust-sel4 相关依赖
sel4 = { workspace = true }
sel4-root-task = { workspace = true }
sel4-elf-header = { workspace = true }
sel4-initialize-tls = { workspace = true }
sel4-stack = { workspace = true }

# 自定义依赖
crate-consts = { workspace = true }
task-helper = { workspace = true }
common = { workspace = true }

# 其他依赖
spin = { version = "0.9.8" }
xmas-elf = "0.9.1"
include_bytes_aligned = "0.1.3"
object = { version = "0.36.1", default-features = false, features = ["read"] }

[build-dependencies]
serde = "1.0"
toml = "0.8.19"
