[package]
name = "root-task"
version = "0.1.0"
edition = "2024"

[dependencies]
# rust-sel4 相关依赖
sel4 = { workspace = true }
sel4-root-task = { workspace = true }
sel4-elf-header = { workspace = true }
sel4-logging = { workspace = true }
sel4-initialize-tls = { workspace = true }
sel4-stack = { workspace = true }

sel4-kit = { workspace = true }
# 自定义依赖
config = { workspace = true }
common = { workspace = true }
slot-manager = { workspace = true }
task-helper = { workspace = true }

# 其他依赖
spin = { workspace = true }
log = "0.4"
xmas-elf = "0.9.1"
include_bytes_aligned = "0.1.3"
object = { version = "0.36.1", default-features = false, features = ["read"] }

[build-dependencies]
serde = "1.0"
toml = "0.8.19"
