[package]
name = "common"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sel4 = { workspace = true }
config = { workspace = true }
common-macros = { workspace = true }
slot-manager = { workspace = true }
object = { version = "0.36.1", default-features = false, features = ["read"] }
bitflags = "2.6"
num_enum = { version = "0.7.3", default-features = false }
log = "0.4"
spin = { workspace = true }
syscalls = { workspace = true }
zerocopy = { version = "0.8.20", features = ["alloc", "derive"] }
