[package]
name = "task-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sel4 = { workspace = true }
sel4-sync = { workspace = true }
common = { workspace = true }
xmas-elf = "0.9.1"
crate-consts = { workspace = true }
log = "0.4"
spin = { workspace = true }
slot-manager = { workspace = true }
