[package]
name = "blk-thread"
version = "0.1.0"
edition = "2024"

[dependencies]
# sel4 = { workspace = true }
sel4 = { workspace = true, default-features = false }
sel4-logging = { workspace = true }
sel4-runtime = { workspace = true }
slot-manager = { workspace = true }
spin = { workspace = true }
log = "0.4"
common = { workspace = true }
crate-consts = { workspace = true }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "61ece50", default-features = false }
