[package]
name = "ext4-thread"
version = "0.1.0"
edition = "2021"

[dependencies]
sel4 = { workspace = true }
sel4-logging = { workspace = true }
sel4-runtime = { workspace = true }
spin = { workspace = true }
log = "0.4"
common = { workspace = true }
crate-consts = { workspace = true }
slot-manager = { workspace = true }

hashbrown = { workspace = true }

# ext4 依赖
ext4_rs = { git = "https://github.com/yuoo655/ext4_rs.git", rev = "04286c7" }
