[package]
name = "fat-thread"
version = "0.1.0"
edition = "2024"

[dependencies]
sel4 = { workspace = true }
sel4-logging = { workspace = true }
sel4-runtime = { workspace = true }
spin = { workspace = true }
log = "0.4"
common = { workspace = true }
slot-manager = { workspace = true }

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs.git"
default-features = false
features = ["alloc", "lfn", "log_level_debug", "unicode"]
