#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "kernel-thread"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
sel4 = { workspace = true }
sel4-logging = { workspace = true }
sel4-kit = { workspace = true }
sel4-runtime = { workspace = true }
sel4-async-single-threaded-executor = { workspace = true }
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }

spin = { workspace = true }
log = "0.4"
syscalls = { workspace = true }
bitflags = "2.6"
memory_addr = "0.3"
num_enum = { version = "0.7", default-features = false }
object = { version = "0.36.1", default-features = false, features = ["read"] }

config = { workspace = true }
common = { workspace = true }
slot-manager = { workspace = true }

zerocopy = { version = "0.8.20", features = ["alloc", "derive"] }
include_bytes_aligned = "0.1.3"
flatten_objects = "0.2.2"

hashbrown = { workspace = true }
