#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "kernel-thread"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
sel4 = { workspace = true }
sel4-logging = { workspace = true }
sel4-kit = { workspace = true }
sel4-runtime = { path = "../../crates/sel4-runtime" }
sel4-async-single-threaded-executor = { workspace = true }
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }

spin = { workspace = true }
log = "0.4"
syscalls = { workspace = true }
bitflags = "2.9.1"
memory_addr = "0.3"
num_enum = { version = "0.7", default-features = false }
object = { version = "0.36.1", default-features = false, features = ["read"] }

common = { workspace = true }
libc-core = { workspace = true }

zerocopy = { version = "0.8.20", features = ["alloc", "derive"] }
flatten_objects = "0.2.2"

hashbrown = { workspace = true }
srv-gate = { workspace = true }

uart-thread = { workspace = true }
lwext4-thread = { workspace = true }

fs = { git = "https://github.com/oscomp/ByteOS.git", rev = "c157728" }
ext4fs = { git = "https://github.com/oscomp/ByteOS.git", rev = "c157728" }
vfscore = { git = "https://github.com/oscomp/ByteOS.git", rev = "c157728" }
