[package]
name = "lwext4-thread"
version = "0.1.0"
edition = "2024"

[dependencies]
sel4 = { workspace = true }
sel4-logging = { workspace = true }
sel4-runtime = { workspace = true }
spin = { workspace = true }
log = "0.4"
common = { workspace = true }
slot-manager = { workspace = true }

hashbrown = { workspace = true }

# ext4 依赖
lwext4_rust = { git = "https://github.com/Azure-stars/lwext4_rust.git", default-features = false, rev = "ee5131c" }

flatten_objects = { workspace = true }
syscalls = { workspace = true }
