[package]
name = "uart-thread"
version = "0.1.0"
edition = "2024"

[dependencies]
sel4 = { workspace = true }
sel4-logging = { workspace = true }
sel4-kit = { workspace = true }
sel4-runtime = { workspace = true }
sel4-async-single-threaded-executor = { workspace = true }

spin = { workspace = true }
log = "0.4"
config = { workspace = true }
common = { workspace = true }
slot-manager = { workspace = true }
arm_pl011 = { git = "https://github.com/Byte-OS/arm_pl011.git", rev = "8a66e24" }
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }
