[package]
name = "uart-thread"
version = "0.1.0"
edition = "2024"

[dependencies]
# sel4 相关依赖
common = { workspace = true }
sel4 = { workspace = true }
sel4-kit = { workspace = true }
sel4-runtime = { workspace = true }

spin = { workspace = true }
log = "0.4"
arm_pl011 = { git = "https://github.com/Byte-OS/arm_pl011.git", rev = "8a66e24" }
srv-gate = { workspace = true }
