[package]
name = "simple-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
sel4 = { workspace = true }
sel4-ctors-dtors = { workspace = true }
sel4-panicking = { workspace = true, features = ["alloc"] }
sel4-panicking-env = { workspace = true }
sel4-logging = { workspace = true }
sel4-dlmalloc = { workspace = true }
sel4-sync = { workspace = true }
sel4-runtime = { workspace = true }
spin = { workspace = true }
log = "0.4"
common = { workspace = true }
slot-manager = { workspace = true }
