[package]
name = "test-demo"
version = "0.1.0"
edition.workspace = true

[features]


[dependencies]
log = "0.4"
config = { workspace = true }
sel4 = { workspace = true }
common = { workspace = true }
srv-gate = { workspace = true }
sel4-runtime = { workspace = true }
uart-thread = { workspace = true }
zerocopy = { workspace = true }
linkme = { workspace = true }
spin = { workspace = true }
